--- a/PiGu_Ch4GLMM.Rmd
+++ b/PiGu_Ch4GLMM.Rmd
@@ -7,23 +7,21 @@ output: word_document
 library(tidyr)
 library(data.table)
 library(ggfortify)
+library(broom) #tidy() augment()
 library(dplyr)
 library(ggplot2)
 library(cowplot)
+library(lme4)
+library(lmerTest)
 library(scales)
 library(reshape2)
-# library(stringr)
-# library(magrittr) 
-#library(ggTimeSeries)
 library(stats) 
 library(zoo)
 library(sciplot)
-library(R2OpenBUGS)
-WINE="/usr/local/Cellar/wine/3.0_1/bin/wine"
-WINEPATH="/usr/local/Cellar/wine/3.0_1/bin/winepath"
-OpenBUGS.pgm="/Users/amandawarlick/.wine/drive_c/Program\ Files/OpenBUGS/OpenBUGS323/OpenBUGS.exe"
+library(jagsUI)
+ 
 setwd("~/Documents/R/SAFS/PigeonGuillemots")
-knitr::opts_chunk$set(echo = TRUE)
+# knitr::opts_chunk$set(echo = TRUE)
 ```
 
 
@@ -33,139 +31,48 @@ knitr::opts_chunk$set(echo = TRUE)
 PG_data_BUGS <- read.csv("PG_data_all.csv", header = T) %>%
   select(year, date, site, week_study, PG_count, intern_data) %>%
   filter(intern_data != 'Y') %>%
-  distinct() %>%
-  filter(site %in% c("Cliffside", "Double Bluff North", "Double Bluff South", "Forbes Point", "Fort Casey",
-                     "Harrington North", "Harrington South", "Hastie Lake South", "Keystone", "Lagoon North #1",
-                     "Lagoon North #2", "Lagoon North #3", "Lagoon South", "Ledgewood", "Malmo Bluff", 
-                     "Maylor Point", "Monroe Landing", "Mutiny Sands", "Possession Point", "Pratts Bluff",
-                     "Rolling Hills #1", "Rolling Hills #2", "Shore Meadows", "Swantown"))
+  distinct() #%>%
+# filter(site %in% c("Cliffside", "Double Bluff North", "Double Bluff South", "Forbes Point", "Fort Casey",
+#                    "Harrington North", "Harrington South", "Hastie Lake South", "Keystone", "Lagoon North #1",
+#                    "Lagoon North #2", "Lagoon North #3", "Lagoon South", "Ledgewood", "Malmo Bluff", 
+#                    "Maylor Point", "Monroe Landing", "Mutiny Sands", "Possession Point", "Pratts Bluff",
+#                    "Rolling Hills #1", "Rolling Hills #2", "Shore Meadows", "Swantown"))
 
-PG_yearly_island <- PG_data_BUGS %>%
-  filter(!is.na(PG_count)) %>%
-  group_by(site, year) %>%
-  summarize(mean_cnt = mean(PG_count)) %>%
+PG_weekly_trim_isl <- read.csv("weekly_count_isl_trim.csv", header = T, stringsAsFactors = F)
+PG_weekly_trim_col <- read.csv("weekly_count_col_trim.csv", header = T, stringsAsFactors = F)
+prey_weeks <- read.csv("prey_weeks.csv", header = T, stringsAsFactors = F)
+
+perc_suc_col <- read.csv("perc_suc_col.csv", header = T, stringsAsFactors = F)
+perc_suc_isl <- read.csv("perc_suc_isl.csv", header = T, stringsAsFactors = F)
+
+fledge_col <- prey_weeks %>%
+  filter(prey_week_range > 2) %>%
+  group_by(year, site) %>%
+  summarize(cnt = n_distinct(burrow_name)) %>%
+  transform(year = as.numeric(as.character(year)))
+
+fledge_isl <- prey_weeks %>%
+  filter(prey_week_range > 2) %>%
   group_by(year) %>%
-  summarize(PG_count = sum(mean_cnt))
+  summarize(cnt = n_distinct(burrow_name)) %>%
+  transform(year = as.numeric(as.character(year)))
 
-#data <- PG_yearly_island
+#untrimmed
+# PG_yearly_island <- PG_data_BUGS %>%
+#   filter(intern_data != 'Y') %>%
+#   filter(!is.na(PG_count)) %>%
+#   group_by(week_study, year) %>%
+#   summarize(cnt = sum(PG_count, na.rm = T)) %>% #sum across colonies
+#   group_by(year) %>%
+#   summarize(PG_count = mean(cnt, na.rm = T)) #mean of weeks
 
-```
+PG_yearly_trim_isl <- PG_weekly_trim_isl %>%
+  group_by(year) %>%
+  summarize(cnt_mean = round(mean(cnt),0))
 
-
-
-```{r}
-
-#Ch. 3: Basicl Poisson & Binomial GLM
-
-####### Simulated data ##############
-#linear predictor is cubic binomial function
-#data to go back to if trying to figure out if something works
-
-# data.fn <- function(n = 40, alpha = 3.5576, beta1 = -0.0912, beta2 = 0.0091, beta3 = -0.00014) {
-#   #generating values of time covariate
-#   year <- 1:n 
-#   #signal part of GLM
-#   log.expected.count <- alpha + beta1*year + beta2*year^2 + beta3*year^3 #Q:why is this additive and not just yr^3?
-#   expected.count <- exp(log.expected.count)
-#   #poisson noise around expected counts
-#   C <- rpois(n = n, lambda = expected.count) 
-#   #plot simulated data; Q: dots are supposed to be "observed data", which is the poisson noise C
-#   plot(year, C, type = "b", col = "black", las = 1)
-#   lines(year, expected.count, col = "red")
-#   return(list(n = n, alpha = alpha, beta1 = beta1, beta2 = beta2, beta3 = beta3,
-#               year = year, expected.count = expected.count, C = C))
-# }
-# data <- data.fn()
-
-# mean.year <- mean(1:length(data$year))
-# sd.year <- sd(1:length(data$year))
-# win.data <- list(C = data$C, n = length(data$C), year = (1:length(data$year) - mean.year)/sd.year)
-
-#analyze sim data using R
-
-# fm <- glm(C ~ year + I(year^2) + I(year^3), family = poisson, data = data)
-# summary(fm)
-
-
-##################### Use real data ##################
-
-#Basic Poisson GLM for (a) adult counts, (b) fecundity (successful fledglings), and 
-# (c) binomial GLM for proportion of successful nesting pairs
-
-### (a): poisson GLM for adult counts
-
-#bundle up the data
-attach(data)
-mean.year <- mean(1:length(year))
-sd.year <- sd(1:length(year))
-win.data <- list(C = PG_count, n = length(PG_count),
-                 year = (1:length(year) - mean.year)/sd.year) #center/standardize year covariate
-
-#specify model in BUGS
-GLM_Poisson_PG <- function() {
-  
-  #priors
-  alpha ~ dunif(-20, 20)
-  beta1 ~ dunif(-10, 10)
-  beta2 ~ dunif(-10, 10)
-  beta3 ~ dunif(-10, 10)
-  #likelihood
-  for(i in 1:n) {
-    C[i] ~ dpois(lambda[i]) #distribution of random element
-    log(lambda[i]) <- log.lambda[i] #link function
-    log.lambda[i] <- alpha + beta1*year[i] + 
-      beta2*pow(year[i], 2) + beta3*pow(year[i], 3) #linear predictor
-  } #i
-}
-
-write.model(GLM_Poisson_PG, "GLM_Poisson_PG.txt")
-model.filePG = paste(getwd(),"GLM_Poisson_PG.txt", sep="/")
-
-#initial values - must define 1
-inits <- function () list(alpha = runif(1, -2, 2),
-                          beta1 = runif(1, -3, 3)) 
-
-#parameters
-params <- c("alpha", "beta1", "beta2", "beta3", "lambda")
-
-#MCMC
-ni <- 1000
-nt <- 2
-nb <- 50
-nc <- 3
-
-out <- bugs(data = win.data, inits = inits, 
-            parameters.to.save = params,
-            model.file = model.filePG, n.chains = nc, 
-            n.thin = nt, n.iter = ni,
-            n.burnin = nb, OpenBUGS.pgm=OpenBUGS.pgm,
-            WINE=WINE,
-            WINEPATH=WINEPATH,
-            useWINE=TRUE,
-            debug = TRUE)
-
-print(out, dig = 3)
-# mean     sd    2.5%     25%     50%     75%   97.5%  Rhat n.eff
-# alpha        6.323  0.021   6.285   6.309   6.322   6.336   6.364 1.001  2800
-# beta1       -0.130  0.037  -0.201  -0.156  -0.131  -0.105  -0.056 1.008   270
-# beta2       -0.043  0.017  -0.077  -0.054  -0.043  -0.031  -0.009 1.001  2800
-# beta3        0.014  0.022  -0.029  -0.001   0.014   0.029   0.055 1.012   180
-# lambda[1]  588.029 21.973 546.845 572.600 587.600 602.800 631.877 1.006   360
-# lambda[2]  598.619 13.568 571.700 589.600 598.800 607.700 624.700 1.001  2800
-#...
-# lambda[10] 437.319 18.594 402.900 424.300 436.700 449.800 475.600 1.005   460
-# deviance   101.497  2.870  97.990  99.442 100.800 102.900 108.777 1.001  2800
-# 
-# DIC info (using the rule, pD = Dbar-Dhat)
-# pD = 3.971 and DIC = 105.500
-
-wingBUGS.predictions <- out$mean$lambda
-plot(year, PG_count, type = "b", lwd = 1, xlab = "", ylab = "Adult Count", pch = 20)
-lines(year, wingBUGS.predictions, type = "l", lwd = 1, lty = 2)
-
-## (b) modeling fecundity
-
-## (c) modeling binomial nesting success
+PG_yearly_trim_col <- PG_weekly_trim_col %>%
+  group_by(year, site) %>%
+  summarize(cnt_mean = mean(PG_count))
 
 ```
 
@@ -175,22 +82,14 @@ lines(year, wingBUGS.predictions, type = "l", lwd = 1, lty = 2)
 #Ch. 4: GLMMS - adding fixed and random effects
 
 #(a) random year effect
-#(b)
-#(c)
-#(d)
 
-#(a) random year effect
+#data <- PG_weekly_trim_isl
 
-PG_weekly_col <- PG_data_BUGS %>%
-  select(-c(date, intern_data))
-
-#data <- PG_weekly_col
-
-attach(data)
-mean.year <- mean(1:length(year))
-sd.year <- sd(1:length(year))
-win.data <- list(C = PG_count, n = length(PG_count),
-                 year = (1:length(year) - mean.year)/sd.year) #center/standardize year covariate
+#attach(data)
+mean.year <- mean(1:length(PG_yearly_trim_isl$year))
+sd.year <- sd(1:length(PG_yearly_trim_isl$year))
+jags.data <- list(C = PG_yearly_trim_isl$cnt_mean, n = length(PG_yearly_trim_isl$cnt_mean),
+                 year = (1:length(PG_yearly_trim_isl$year) - mean.year)/sd.year) #center/standardize year covariate
 
 #specify model in BUGS
 GLMM_Poisson_PG <- function() {
@@ -199,7 +98,6 @@ GLMM_Poisson_PG <- function() {
   alpha ~ dunif(-20, 20)
   beta1 ~ dunif(-10, 10)
   beta2 ~ dunif(-10, 10)
-  beta3 ~ dunif(-10, 10)
   tau <- 1/(sd*sd)
   sd ~ dunif(0, 3)
   
@@ -207,8 +105,7 @@ GLMM_Poisson_PG <- function() {
   for(i in 1:n) {
     C[i] ~ dpois(lambda[i]) #distribution of random element
     log(lambda[i]) <- log.lambda[i] #link function
-    log.lambda[i] <- alpha + beta1*year[i] + beta2*pow(year[i], 2) + 
-      beta3*pow(year[i], 3) + eps[i] #linear predictor & random year effect
+    log.lambda[i] <- alpha + beta1*year[i] + eps[i] #linear predictor & random year effect
     eps[i] ~ dnorm(0, tau) #defines random effects distribution
   } 
 }
@@ -216,52 +113,42 @@ GLMM_Poisson_PG <- function() {
 write.model(GLMM_Poisson_PG, "GLMM_Poisson_PG.txt")
 model.filePG = paste(getwd(),"GLMM_Poisson_PG.txt", sep="/")
 
-#initial values - m ust define 1
+#initial values 
 inits <- function () list(alpha = runif(1, -2, 2),
                           beta1 = runif(1, -3, 3),
                           sd = runif(1, 0, 1)) 
 
 #parameters
-params <- c("alpha", "beta1", "beta2", "beta3", "lambda", "sd", "eps")
+params <- c("alpha", "beta1", "lambda", "sd", "eps")
 
 #MCMC
-ni <- 100000
+ni <- 1000000
 nt <- 2
-nb <- 5000
+nb <- 500
 nc <- 3
 
-out <- bugs(data = win.data, inits = inits, 
+out <- jags(jags.data, inits = inits, 
             parameters.to.save = params,
             model.file = model.filePG, n.chains = nc, 
             n.thin = nt, n.iter = ni,
-            n.burnin = nb, useWINE=TRUE, OpenBUGS.pgm=OpenBUGS.pgm,
-            WINE=WINE, WINEPATH=WINEPATH,
-            debug = TRUE)
+            n.burnin = nb, parallel = TRUE)
 
 print(out, dig = 3)
-# mean     sd    2.5%     25%     50%     75%   97.5%  Rhat  n.eff
-# alpha        3.401  1.382   0.040   2.683   3.487   4.338   5.699 1.275     13
-# beta1       -1.418  2.965  -7.513  -3.459  -1.268   0.646   4.014 1.693      6
-# beta2       -1.664  1.094  -3.587  -2.416  -1.774  -0.929   0.517 1.076     33
-# beta3        0.641  1.648  -2.195  -0.553   0.549   1.742   4.130 1.615      7
-# lambda[1]  617.925 24.851 570.200 601.000 617.600 634.500 667.500 1.001  97000
-# lambda[2]  549.257 23.422 504.200 533.400 548.900 564.800 596.200 1.001  84000
-# lambda[3]  588.740 24.287 542.200 572.200 588.400 604.900 637.500 1.001 280000
-#...
-# lambda[8]  433.232 20.784 393.400 419.000 432.900 447.100 474.800 1.001  40000
-# lambda[9]  464.248 21.486 423.000 449.600 463.900 478.600 507.400 1.001  59000
-# lambda[10] 451.886 21.245 411.100 437.400 451.600 466.000 494.400 1.001 120000
-# sd           2.841  0.180   2.345   2.790   2.899   2.959   2.996 1.069    120
-# eps[1]       6.698  2.790   1.898   4.586   6.569   8.507  12.430 1.011    230
-# eps[2]       4.482  1.779   0.957   3.267   4.380   5.697   7.992 1.366      9
-#...
-# eps[9]       5.612  1.697   2.175   4.520   5.596   6.742   8.899 1.071     33
-# eps[10]      6.391  2.416   1.876   4.659   6.431   8.123  10.910 1.128     21
-# deviance    91.211  4.467  84.460  87.960  90.560  93.780 101.700 1.001 130000
-
-# DIC info (using the rule, pD = Dbar-Dhat)
-# pD = 9.993 and DIC = 101.200
-
+#               mean     sd    2.5%     50%   97.5% overlap0     f  Rhat   n.eff
+# alpha        6.556  0.192   6.536   6.570   6.601    FALSE 1.000 1.031    7370
+# beta1       -0.009  0.091  -0.038  -0.003   0.030     TRUE 0.568 1.033    4880
+# lambda[1]  702.121 22.455 654.353 703.469 742.752    FALSE 1.000 1.000  230872
+# lambda[2]  724.069 19.974 688.527 722.612 767.740    FALSE 1.000 1.000  421880
+# ...
+# lambda[9]  709.347 18.525 672.142 709.466 745.934    FALSE 1.000 1.000 1499250
+# lambda[10] 717.094 20.507 679.194 716.164 760.342    FALSE 1.000 1.000  564909
+# sd           0.041  0.182   0.001   0.023   0.079    FALSE 1.000 1.013    7827
+# eps[1]      -0.016  0.111  -0.096  -0.012   0.026     TRUE 0.753 1.064  151496
+# eps[2]       0.018  0.123  -0.033   0.006   0.080     TRUE 0.673 1.013   28100
+# ...
+# eps[9]       0.019  0.284  -0.057  -0.001   0.053     TRUE 0.463 1.045    5771
+# eps[10]      0.033  0.314  -0.039   0.004   0.078     TRUE 0.630 1.046    5562
+# deviance    93.629  3.333  87.660  93.592 100.914    FALSE 1.000 1.000 1499250
 
 ```
 
@@ -272,12 +159,9 @@ print(out, dig = 3)
 # tits <- read.table("tits.txt", header = T)
 # C_tits <- as.matrix(tits[5:13])
 
-PG_weekly_col <- PG_data_BUGS %>%
-  select(-c(date, intern_data))
-
-PG_col_wide <- PG_weekly_col %>%
+PG_col_wide <- PG_weekly_trim_col %>%
   group_by(site, year) %>%
-  summarize(PG_count = max(PG_count)) %>%
+  summarize(PG_count = round(mean(PG_count, na.rm = T), 0)) %>%
   dcast(site ~ year, value.var = 'PG_count')
 
 #adjust when add new years of data
@@ -300,7 +184,7 @@ write.model(GLMM_0, "GLMM0.txt")
 model.fileGLMM0 = paste(getwd(),"GLMM0.txt", sep="/")
 
 #bundle etc.
-win.data <- list(C = t(C), nsite = nrow(C), nyear = ncol(C))
+jags.data <- list(C = t(C), nsite = nrow(C), nyear = ncol(C))
 
 inits <- function() list(alpha = runif(1, -10, 10))
 params <- c("alpha")
@@ -310,31 +194,32 @@ nt <- 2
 nb <- 100
 nc <- 3
 
-out_0 <- bugs(data = win.data, inits = inits, 
+out_0 <- jags(jags.data, inits = inits, 
               parameters.to.save = params,
-              model.file = model.fileGLMM0, n.chains = nc, 
-              n.thin = nt, n.iter = ni,
-              n.burnin = nb, useWINE=TRUE, OpenBUGS.pgm=OpenBUGS.pgm,
-              WINE=WINE, WINEPATH=WINEPATH,
-              debug = TRUE) 
+              model.file = model.fileGLMM0, 
+              n.chains = nc, n.thin = nt, n.iter = ni,
+              n.burnin = nb, parallel = T) 
 
 print(out_0, 3)
-# Current: 3 chains, each with 10000 iterations (first 100 discarded), n.thin = 2
-# Cumulative: n.sims = 29700 iterations saved
-# mean    sd     2.5%      25%      50%      75%    97.5%  Rhat n.eff
-# alpha       3.715 0.012    3.693    3.707    3.716    3.723    3.739 1.003  1000
-# deviance 3078.771 1.405 3078.000 3078.000 3078.000 3079.000 3083.000 1.007  1100
+#              mean    sd     2.5%      50%    97.5% overlap0 f Rhat n.eff
+# alpha       3.466 0.011    3.445    3.467    3.488    FALSE 1    1 14850
+# deviance 4085.274 1.440 4084.246 4084.718 4089.430    FALSE 1    1 14850
 # 
-# For each parameter, n.eff is a crude measure of effective sample size,
-# and Rhat is the potential scale reduction factor (at convergence, Rhat=1).
-# 
-# DIC info (using the rule, pD = Dbar-Dhat)
-# pD = 1.017 and DIC = 3080.000
+# DIC info: (pD = var(deviance)/2) 
+# pD = 1 and DIC = 4086.312
 
 ```
 
 
 ```{r}
+# data same as above
+# PG_col_wide <- PG_weekly_trim_col %>%
+#   group_by(site, year) %>%
+#   summarize(PG_count = round(mean(PG_count, na.rm = T), 0)) %>%
+#   dcast(site ~ year, value.var = 'PG_count')
+# 
+# #adjust when add new years of data
+# C <- as.matrix(PG_col_wide[2:11])
 
 #fixed site effects (one-way ANOVA for poisson response)
 GLMM_site_f <- function() {
@@ -355,9 +240,10 @@ write.model(GLMM_site_f, "GLMM_site_f.txt")
 model.fileGLMM_site_f = paste(getwd(),"GLMM_site_f.txt", sep="/")
 
 #bundle etc.
-win.data <- list(C = t(C), nsite = nrow(C), nyear = ncol(C))
+jags.data <- list(C = t(C), nsite = nrow(C), nyear = ncol(C))
 
-inits <- function() list(alpha = runif(235, -1, 1))
+#something wrong with the initials - won't run with this
+#inits <- function() list(alpha = runif(235, -1, 1))
 params <- c("alpha")
 
 ni <- 10000
@@ -365,19 +251,36 @@ nt <- 2
 nb <- 1000
 nc <- 3
 
-#not working
-out_site_f <- bugs(win.data, inits, params, model.file = model.fileGLMM_site_f, 
+out_site_f <- jags(jags.data, parameters.to.save = params, model.file = model.fileGLMM_site_f, 
                    n.chains = nc, n.thin = nt, n.iter = ni,
-                   n.burnin = nb, debug = TRUE, OpenBUGS.pgm = OpenBUGS.pgm, 
-                   WINE = WINE, WINEPATH = WINEPATH, useWINE = TRUE) 
+                   n.burnin = nb, parallel = T) 
 
 print(out_site_f, 3)
+#               mean    sd     2.5%      50%    97.5% overlap0 f  Rhat n.eff
+# alpha[1]     1.661 0.310    1.004    1.676    2.226    FALSE 1 1.000  4899
+# alpha[2]     3.399 0.058    3.282    3.400    3.513    FALSE 1 1.000  9271
+# alpha[3]     2.505 0.204    2.091    2.513    2.885    FALSE 1 1.000 13500
+# ...
+# alpha[41]    3.722 0.078    3.567    3.723    3.874    FALSE 1 1.000 13500
+# alpha[42]    4.141 0.040    4.062    4.141    4.218    FALSE 1 1.000  9563
+# alpha[43]    3.125 0.067    2.993    3.125    3.255    FALSE 1 1.000 13500
+# deviance  2055.318 9.409 2039.262 2054.663 2075.976    FALSE 1 1.000 13500
 
 ```
 
 
 ```{r}
 #fixed site and fixed year (two-way main effects ANOVA for Poisson response)
+
+# data same as above
+# PG_col_wide <- PG_weekly_trim_col %>%
+#   group_by(site, year) %>%
+#   summarize(PG_count = round(mean(PG_count, na.rm = T), 0)) %>%
+#   dcast(site ~ year, value.var = 'PG_count')
+# 
+# #adjust when add new years of data
+# C <- as.matrix(PG_col_wide[2:11])
+
 GLMM_siteyr_f <- function() {
   #priors
   for (j in 1:nsite) {
@@ -386,7 +289,7 @@ GLMM_siteyr_f <- function() {
   for (i in 2:nyear) {
     eps[i] ~ dnorm(0, 0.01)
   }
-  eps[1] <- 0 #aliased; set value of first level of year effects to zero to avoid overparameterization?
+  eps[1] <- 0 #aliased; set value of first level of year effects to zero to avoid overparameterization
   #likelihood
   for (i in 1:nyear) {
     for (j in 1:nsite) {
@@ -400,7 +303,7 @@ write.model(GLMM_siteyr_f, "GLMM_siteyr_f.txt")
 model.fileGLMM_siteyr_f = paste(getwd(),"GLMM_siteyr_f.txt", sep="/")
 
 #bundle etc.
-win.data <- list(C = t(C), nsite = nrow(C), nyear = ncol(C))
+jags.data <- list(C = t(C), nsite = nrow(C), nyear = ncol(C))
 
 inits <- function() list(alpha = runif(235, -1, 1), 
                          eps = c(NA, runif(8, -1, 1)))
@@ -411,19 +314,38 @@ nt <- 2
 nb <- 10
 nc <- 3
 
-#not working
-out_siteyr_f <- bugs(win.data, inits, params, n.chains = nc, n.thin = nt, n.iter = ni,
-                     n.burnin = nb, debug = T, OpenBUGS.pgm = OpenBUGS.pgm, 
-                     model.file = model.fileGLMM_siteyr_f, 
-                     WINE = WINE, WINEPATH = WINEPATH, useWINE = TRUE) 
+out_siteyr_f <- jags(jags.data, 
+                     #inits, 
+                     parameters.to.save = params, n.chains = nc, n.thin = nt, n.iter = ni,
+                     n.burnin = nb, model.file = model.fileGLMM_siteyr_f, 
+                     parallel = TRUE) 
 
 print(out_siteyr_f, 3) 
+#               mean     sd     2.5%      50%    97.5% overlap0     f  Rhat n.eff
+# alpha[1]     1.720  0.312    1.067    1.740    2.286    FALSE 1.000 1.001  2287
+# alpha[2]     3.446  0.067    3.312    3.446    3.574    FALSE 1.000 1.000 17985
+# alpha[3]     2.576  0.205    2.159    2.583    2.963    FALSE 1.000 1.000 17985
+# ...
+# eps[7]      -0.031  0.050   -0.128   -0.031    0.068     TRUE 0.733 1.000 17985
+# eps[8]      -0.095  0.052   -0.195   -0.095    0.007     TRUE 0.967 1.000 17985
+# eps[9]      -0.094  0.050   -0.193   -0.094    0.004     TRUE 0.970 1.000  7833
+# eps[10]     -0.045  0.052   -0.146   -0.045    0.058     TRUE 0.802 1.000 17985
+# deviance  2062.023 12.228 2040.558 2061.150 2088.050    FALSE 1.000 1.000  7746
 
 ```
 
 ```{r}
 
 #random effects - site only
+
+# data same as above
+# PG_col_wide <- PG_weekly_trim_col %>%
+#   group_by(site, year) %>%
+#   summarize(PG_count = round(mean(PG_count, na.rm = T), 0)) %>%
+#   dcast(site ~ year, value.var = 'PG_count')
+# 
+# #adjust when add new years of data
+# C <- as.matrix(PG_col_wide[2:11])
 
 GLMM_site_r <- function() {
   #priors
@@ -446,7 +368,7 @@ write.model(GLMM_site_r, "GLMM_site_r.txt")
 model.fileGLMM_site_r = paste(getwd(),"GLMM_site_r.txt", sep="/")
 
 #bundle etc.
-win.data <- list(C = t(C), nsite = nrow(C), nyear = ncol(C))
+jags.data <- list(C = t(C), nsite = nrow(C), nyear = ncol(C))
 
 inits <- function() list(mu.alpha = runif(1, 2, 3))
 params <- c("alpha", "mu.alpha", "sd.alpha")
@@ -456,31 +378,19 @@ nt <- 2
 nb <- 100
 nc <- 3
 
-out_site_r <- bugs(data = win.data, inits = inits, 
-                   parameters.to.save = params,
+out_site_r <- jags(jags.data, inits, params,
                    model.file = model.fileGLMM_site_r, n.chains = nc, 
-                   n.thin = nt, n.iter = ni,
-                   n.burnin = nb, useWINE=TRUE, OpenBUGS.pgm=OpenBUGS.pgm,
-                   WINE=WINE, WINEPATH=WINEPATH,
-                   debug = TRUE) 
+                   n.thin = nt, n.iter = ni, parallel = TRUE) 
 
-print(out_site_r, 3) #converges
-# Current: 3 chains, each with 10000 iterations (first 100 discarded), n.thin = 2
-# Cumulative: n.sims = 29700 iterations saved
-# mean    sd     2.5%      25%      50%      75%    97.5%  Rhat n.eff
-# alpha[1]     3.592 0.054    3.483    3.556    3.593    3.630    3.696 1.001  9000
-# alpha[2]     4.445 0.037    4.373    4.421    4.446    4.470    4.516 1.001  4500
-# alpha[3]     2.840 0.085    2.671    2.783    2.842    2.899    3.000 1.002  3400
+print(out_site_r, 3) 
+#               mean    sd     2.5%      50%    97.5% overlap0 f  Rhat n.eff
+# alpha[1]     1.956 0.244    1.453    1.964    2.413    FALSE 1 1.000  6872
+# alpha[2]     3.399 0.057    3.285    3.399    3.511    FALSE 1 1.000 10587
+# alpha[3]     2.580 0.185    2.198    2.585    2.927    FALSE 1 1.000 15000
 # ...
-# mu.alpha     3.593 0.101    3.394    3.527    3.593    3.659    3.795 1.001 30000
-# sd.alpha     0.485 0.079    0.359    0.429    0.476    0.530    0.666 1.001 30000
-# deviance  1566.402 7.014 1555.000 1561.000 1566.000 1571.000 1582.000 1.001 29000
-# 
-# For each parameter, n.eff is a crude measure of effective sample size,
-# and Rhat is the potential scale reduction factor (at convergence, Rhat=1).
-# 
-# DIC info (using the rule, pD = Dbar-Dhat)
-# pD = 23.650 and DIC = 1590.000
+# mu.alpha     3.262 0.097    3.068    3.263    3.450    FALSE 1 1.000 15000
+# sd.alpha     0.619 0.075    0.492    0.612    0.784    FALSE 1 1.000 14329
+# deviance  2056.180 9.458 2039.676 2055.397 2076.770    FALSE 1 1.000 15000
 
 ```
 
@@ -488,6 +398,15 @@ print(out_site_r, 3) #converges
 ```{r}
 
 #random effects - site and year
+
+# data same as above
+# PG_col_wide <- PG_weekly_trim_col %>%
+#   group_by(site, year) %>%
+#   summarize(PG_count = round(mean(PG_count, na.rm = T), 0)) %>%
+#   dcast(site ~ year, value.var = 'PG_count')
+# 
+# #adjust when add new years of data
+# C <- as.matrix(PG_col_wide[2:11])
 
 GLMM_siteyr_r <- function() {
   #priors
@@ -517,7 +436,7 @@ write.model(GLMM_siteyr_r, "GLMM_siteyr_r.txt")
 model.fileGLMM_siteyr_r = paste(getwd(),"GLMM_siteyr_r.txt", sep="/")
 
 #bundle etc.
-win.data <- list(C = t(C), nsite = nrow(C), nyear = ncol(C))
+jags.data <- list(C = t(C), nsite = nrow(C), nyear = ncol(C))
 
 inits <- function() list(mu = runif(1, 0, 4), 
                          alpha = runif(235, -1, 1),
@@ -529,22 +448,46 @@ nt <- 2
 nb <- 100
 nc <- 3
 
-out_siteyr_r <- bugs(data = win.data, inits = inits, 
+out_siteyr_r <- jags(jags.data, 
+                     #inits = inits, 
                      parameters.to.save = params,
                      model.file = model.fileGLMM_siteyr_r, n.chains = nc, 
                      n.thin = nt, n.iter = ni,
-                     n.burnin = nb, useWINE=TRUE, OpenBUGS.pgm=OpenBUGS.pgm,
-                     WINE=WINE, WINEPATH=WINEPATH,
-                     debug = TRUE) 
+                     n.burnin = nb, parallel = TRUE) 
 
-#doesn't converge
 print(out_siteyr_r, 3)
 
+#               mean     sd     2.5%      50%    97.5% overlap0     f  Rhat n.eff
+# mu           3.205  0.110    2.986    3.205    3.421    FALSE 1.000 1.000  6355
+# alpha[1]    -1.259  0.268   -1.805   -1.250   -0.759    FALSE 1.000 1.001  3959
+# alpha[2]     0.190  0.123   -0.046    0.190    0.434     TRUE 0.942 1.000  3708
+# ...
+# eps[9]      -0.031  0.031   -0.098   -0.028    0.024     TRUE 0.848 1.000 14843
+# eps[10]     -0.002  0.030   -0.064   -0.001    0.059     TRUE 0.523 1.000  8800
+# sd.alpha     0.639  0.087    0.494    0.629    0.837    FALSE 1.000 1.000  7975
+# sd.eps       0.046  0.021    0.012    0.043    0.095    FALSE 1.000 1.001 14850
+# deviance  2063.115 11.024 2043.745 2062.433 2086.766    FALSE 1.000 1.001  3542
+
+plot(out_siteyr_r)
 ```
 
 ```{r}
 
 # random site/year effects and overall linear time trend
+
+# data same as above
+# PG_col_wide <- PG_weekly_trim_col %>%
+#   group_by(site, year) %>%
+#   summarize(PG_count = round(mean(PG_count, na.rm = T), 0)) %>%
+#   dcast(site ~ year, value.var = 'PG_count')
+# 
+# #adjust when add new years of data
+# C <- as.matrix(PG_col_wide[2:11])
+
+L <- PG_weekly_trim_col %>%
+  group_by(site, year) %>%
+  summarize(PG_count = round(mean(PG_count, na.rm = T), 0)) %>%
+  nrow()
 
 GLMM_siteyr_r_trend <- function() {
   #priors
@@ -571,36 +514,99 @@ GLMM_siteyr_r_trend <- function() {
       log.lambda[i,j] <- mu + beta1*year[i] + alpha[j] + eps[i]
     } #j
   } #i
+        #for (i in 1:L){
+   #resi[i,j] <- C[i,j] - lambda[i,j] # Derived quantities - residuals; could have defined under the likelihood for loop
+      #}
 }
 write.model(GLMM_siteyr_r_trend, "GLMM_siteyr_r_trend.txt")
 model.fileGLMM_siteyr_r_trend = paste(getwd(),"GLMM_siteyr_r_trend.txt", sep="/")
 
 #bundle etc.
-mean.year <- mean(1:length(PG_yearly_island$year))
-sd.year <- sd(1:length(PG_yearly_island$year))
+mean.year <- mean(1:length(PG_yearly_trim_isl$year))
+sd.year <- sd(1:length(PG_yearly_trim_isl$year))
 
-win.data <- list(C = t(C), nsite = nrow(C), nyear = ncol(C), 
-                 year = (1:length(PG_yearly_island$year) - mean.year)/sd.year)
+jags.data <- list(C = t(C), nsite = nrow(C), nyear = ncol(C), L = L,
+                 year = (1:length(PG_yearly_trim_isl$year) - mean.year)/sd.year)
 
 inits <- function() list(mu = runif(1, 0, 4), 
                          alpha = runif(235, -1, 1),
                          beta1 = runif(1, -1, 1),
                          eps = runif(9, -1, 1))
-params <- c("mu", "beta1", "alpha", "eps", "sd.alpha", "sd.eps")
+params <- c("mu", "beta1", "alpha", "eps", "sd.alpha", "sd.eps" 
+            #, "resi"
+            )
 
-ni <- 12000
-nt <- 6
+ni <- 100000
+nt <- 2
 nb <- 6000
 nc <- 3
 
-out_siteyr_r_trend <- bugs(data = win.data, inits = inits, 
+out_full <- jags(jags.data, 
+                           #inits = inits, 
                      parameters.to.save = params,
                      model.file = model.fileGLMM_siteyr_r_trend, n.chains = nc, 
                      n.thin = nt, n.iter = ni,
-                     n.burnin = nb, useWINE=TRUE, OpenBUGS.pgm=OpenBUGS.pgm,
-                     WINE=WINE, WINEPATH=WINEPATH,
-                     debug = TRUE) 
-#doesn't converge
-print(out_siteyr_r_trend, 3)
+                     parallel = TRUE) 
+
+print(out_full, 3)
+
+# par(mfrow = c(1, 2), mar = c(2, 3, 3, 2), cex.lab = 1.5, cex.axis = 1.5)
+# plot(out_full)
+
+par(mfrow = c(1, 2), mar = c(5,4,2,3), cex = 0.7)
+whiskerplot(out_full, param = c("mu", "beta1", "alpha", "eps", "sd.alpha", "sd.eps")) #, 'resi[c(1,3, 5:7)]'))    
+library(denstrip)      # Similar, but more beautiful, with package denstrip
+plot(out_full$sims.list$mu, xlim=c(-4, 4), ylim=c(1, 5), xlab="", ylab="", type="n", axes = F, main = "Density strip plots")
+axis(1)
+axis(2, at = 1:6, labels = c("mu", "beta1", "alpha", "eps", "sd.alpha", "sd.eps"), las = 1)
+abline(v = c(-4,-2,2,4), col = "grey")  ;  abline(v = 0)
+for(k in 1:6){
+   denstrip(unlist(out_full$sims.list[k]), at = k, ticks = out_full$summary[k, c(3,5,7)])
+}
+
+#plotting the actual posterior samples for each covariate, in histograms with confidence interval
+par(mfrow = c(2, 2), mar = c(5,4,2,3), cex.main = .7)
+hist(out_full$sims.list$mu, main = "", breaks = 100, col = "grey", freq = F, cex = 0.7)
+abline(v = quantile(out_full$sims.list$beta1, prob = c(0.025, 0.975)), col = "red", lwd = 2)
+
+hist(out_full$sims.list$alpha, main = "", breaks = 100, col = "grey", freq = F)
+abline(v = quantile(out_full$sims.list$alpha, prob = c(0.025, 0.975)), col = "red", lwd = 2)
+
+hist(out_full$sims.list$eps, main = "", breaks = 100, col = "grey", freq = F)
+abline(v = quantile(out_full$sims.list$eps, prob = c(0.025, 0.975)), col = "red", lwd = 2)
+
+
+#model in R
+data_fm <- PG_weekly_trim_col %>%
+  group_by(site, year) %>%
+  summarize(PG_count = round(mean(PG_count, na.rm = T), 0))
+
+summary(fm_trend <- glmer(PG_count ~ year + site + (1|site), family = poisson, data = data_fm))
+
+plot(glmer(PG_count ~ year + site + (1| site), family = poisson, data = data_fm))
+
+#same plots using our JAGs output
+#TAKES FOREVER, WATCH OUT
+# lambda <- out_full$mean$mu + out_full$mean$beta1 * year + out_full$mean$alpha + out_full$mean$eps       # Compute the posterior mean of lambda
+
+par(mfrow = c(2, 2), mar = c(5,4,2,2), cex.main = .7)
+# plot(1:L, out1$summary[6:272, 1], xlab = "Order of values", ylab = "Residual", frame.plot = F, ylim = c(-10, 15))
+# abline(h = 0, col = "red", lwd = 2)
+# segments(1:267, out1$summary[6:272, 3], 1:267, out1$summary[6:272, 7], col = "grey")
+# text(10, 14, "A", cex = 1.5)
+# hist(out1$summary[6:272, 1], xlab = "Residual", main = "", breaks = 50, col = "grey", xlim = c(-10, 15))
+# abline(v = 0, col = "red", lwd = 2)
+# text(-9, 48, "B", cex = 1.5)
+# qq <- qnorm(seq(0,0.9999,,data$M), mean = 0, sd = out1$summary[5, 1])
+# plot(sort(qq), sort(out1$summary[6:272, 1]), xlab = "Theoretical quantile", ylab = "Residual", frame.plot = F, ylim = c(-10, 15)) # could also use qqnorm()
+# abline(0, 1, col = "red", lwd = 2)
+# text(-4.5, 14, "C", cex = 1.5)
+# plot(mu, out1$summary[6:272, 1], xlab = "Predicted values", ylab = "Residual", frame.plot = F, ylim = c(-10, 15))
+# abline(h = 0, col = "red", lwd = 2)
+# segments(mu, out1$summary[6:272, 3], mu, out1$summary[6:272, 7], col = "grey")
+# text(-1, 14, "D", cex = 1.5)
+
+confint(glmer(PG_count ~ year + site + (1| site), family = poisson, data = data_fm))
+
 ```
 
